fix FF ellipses fade on assignment points
Fixes: CNVS-24909

The Firefox white-space bug strikes again. This
commit removes our Firefox workaround mixin to the
.ellipses class when it is contained by the .ig-list
> .ig-row elements by adding a min-width: 1px.

test plan:
- create an assignment with a long name and lots of
  options (multiple due dates).
- add the assignment to a module
- return to the assignments index page, and make sure
  the layout now looks like this:
  as a teacher: http://screencast.com/t/VLq8r9pFu
  (the publish and cog icons should not be pushed out of view)
  as a student: http://screencast.com/t/ayuDw77e
  (the points should not be faded out)
- click on the conferences link from the left-hand sub-nav
  the items should ellipses when the brwoser is reduced

Reviewed-on: https://gerrit.instructure.com/69856
Product-Review: Chris Hart <chart@instructure.com>
Tested-by: Jenkins
QA-Review: Myller de Araujo <myller@instructure.com>

--- a/app/stylesheets/bundles/conferences.scss
+++ b/app/stylesheets/bundles/conferences.scss
@@ -55,11 +55,7 @@ header:not(.ic-app-header) {
 }
 
 .ig-list .ig-row  {
-  
-  // Conferences has no background color highlight on hover,
-  // so need to overwrite .ig-row default for Firefox
-  @include firefox-white-space-bug-fix($ic-color-light, $ic-color-light);
-  
+
   .ellipses { color: $ic-font-color--subdued; }
 }
 
